# Agents

./: .env  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  project_memory.md  requirements.txt
.github/workflows/: deploy.yml  pr-check.yml
agents/knowledge_ydt/: AGENTS.md
agents/map_agent/: AGENTS.md
agents/project/: AGENTS.md
app/: .dockerignore  .env.example  Dockerfile  MainServer.py  main.py  pytest.ini  readme.md  requirements.txt
app/agents/: Mainagent.py  __init__.py  readme.md
app/core/: __init__.py  database.py  dependencies.py  menu_registry.py  prompts.py  server.py
app/html/: Agent.html
app/migrations/: 2026_07_24_clear_users_allowed_agents_for_non_admin.sql  __init__.py  init_all_tables.sql  seed_map_agent.py  (+3 more)
docs/: hitl-protocol.md
mcpClient/: README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
mcpClient/examples/: agent_config_example.py  agent_with_mcp.py  basic_usage.py
mcpClient/mcpClient/: __init__.py  main.py  test_mcp_client.py
mcpClient/mcpClient/core/: __init__.py  unified_mcp_client.py
mcpClient/mcpClient/core/mcp_client/: __init__.py  client_pool.py  mcp_client.py  registry.py  sampling_handler.py
mcpClient/mcpClient/routers/: __init__.py  mcp_router.py  page_router.py
mcpClient/mcpClient/shared/: __init__.py  config_loader.py
mcpClient/mcpClint/: main.py
mcpClient/mcpClint/core/: __init__.py
mcpClient/mcpClint/core/mcp_client/: __init__.py  client_pool.py  security.py
mcpClient/mcpClint/shared/: __init__.py
tests/: test_ask_user_question.py
web/: README.md
(+776 files in other folders)
